--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
 # .env
 MONGODB_URI="mongodb+srv://<username>:<password>@cluster0.jklca.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 MONGODB_DB_NAME="ipo_bot_db"
+MONGODB_COLLECTION_NAME="ipo_status"
